--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,31 +38,31 @@ jobs:
       #       echo "reviewdog returned ${reviewdog_return}, expected '0'. Failing..."
       #       exit 1
       #     fi
-  test-pr-check:
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./
-        # continue-on-error: true
-        id: test
-        with:
-          github_token: ${{ secrets.github_token }}
-          reporter: github-pr-check
-          fail_on_error: "true"
-          filter_mode: "nofilter"
-          working_directory: testdata
-  test-pr-review:
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./
-        # continue-on-error: true
-        id: test
-        with:
-          github_token: ${{ secrets.github_token }}
-          reporter: github-pr-review
-          fail_on_error: "true"
-          filter_mode: "nofilter"
-          working_directory: testdata
+  # test-pr-check:
+  #   if: github.event_name == 'pull_request'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: ./
+  #       # continue-on-error: true
+  #       id: test
+  #       with:
+  #         github_token: ${{ secrets.github_token }}
+  #         reporter: github-pr-check
+  #         fail_on_error: "true"
+  #         filter_mode: "nofilter"
+  #         working_directory: testdata
+  # test-pr-review:
+  #   if: github.event_name == 'pull_request'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: ./
+  #       # continue-on-error: true
+  #       id: test
+  #       with:
+  #         github_token: ${{ secrets.github_token }}
+  #         reporter: github-pr-review
+  #         fail_on_error: "true"
+  #         filter_mode: "nofilter"
+  #         working_directory: testdata
