--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
         id: test
-        # continue-on-error: true
+        continue-on-error: true
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-check
@@ -19,50 +19,50 @@ jobs:
           filter_mode: "nofilter"
           working_directory: testdata
       # The check is expected to fail on the test data
-      # - name: Check return codes
-      #   if: success() || failure ()
-      #   run: |
-      #     checkov_return="${{ steps.test.outputs.checkov-return-code }}"
-      #     reviewdog_return="${{ steps.test.outputs.reviewdog-return-code }}"
+      - name: Check return codes
+        if: success() || failure ()
+        run: |
+          checkov_return="${{ steps.test.outputs.checkov-return-code }}"
+          reviewdog_return="${{ steps.test.outputs.reviewdog-return-code }}"
 
-      #     if [ "$checkov_return" -eq 3 ]; then
-      #       echo "checkov correctly returned failure ${checkov_return}"
-      #     else
-      #       echo "checkov returned ${checkov_return}, expected '3'. Failing..."
-      #       exit 1
-      #     fi
+          if [ "$checkov_return" -eq 3 ]; then
+            echo "checkov correctly returned failure ${checkov_return}"
+          else
+            echo "checkov returned ${checkov_return}, expected '3'. Failing..."
+            exit 1
+          fi
 
-      #     if [ "$reviewdog_return" -eq 0 ]; then
-      #       echo "reviewdog correctly returned success: ${reviewdog_return}"
-      #     else
-      #       echo "reviewdog returned ${reviewdog_return}, expected '0'. Failing..."
-      #       exit 1
-      #     fi
-  # test-pr-check:
-  #   if: github.event_name == 'pull_request'
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: ./
-  #       # continue-on-error: true
-  #       id: test
-  #       with:
-  #         github_token: ${{ secrets.github_token }}
-  #         reporter: github-pr-check
-  #         fail_on_error: "true"
-  #         filter_mode: "nofilter"
-  #         working_directory: testdata
-  # test-pr-review:
-  #   if: github.event_name == 'pull_request'
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: ./
-  #       # continue-on-error: true
-  #       id: test
-  #       with:
-  #         github_token: ${{ secrets.github_token }}
-  #         reporter: github-pr-review
-  #         fail_on_error: "true"
-  #         filter_mode: "nofilter"
-  #         working_directory: testdata
+          if [ "$reviewdog_return" -eq 0 ]; then
+            echo "reviewdog correctly returned success: ${reviewdog_return}"
+          else
+            echo "reviewdog returned ${reviewdog_return}, expected '0'. Failing..."
+            exit 1
+          fi
+  test-pr-check:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./
+        # continue-on-error: true
+        id: test
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-check
+          fail_on_error: "true"
+          filter_mode: "nofilter"
+          working_directory: testdata
+  test-pr-review:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./
+        # continue-on-error: true
+        id: test
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review
+          fail_on_error: "true"
+          filter_mode: "nofilter"
+          working_directory: testdata
