--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-check
-          fail_on_error: "true"
-          filter_mode: "nofilter"
+          # fail_on_error: "true"
+          # filter_mode: "nofilter"
           working_directory: testdata
       # The check is expected to fail on the test data
       - name: Check return codes
@@ -49,8 +49,8 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-check
-          fail_on_error: "true"
-          filter_mode: "nofilter"
+          # fail_on_error: "true"
+          # filter_mode: "nofilter"
           working_directory: testdata
       # The check is expected to fail on the test data
       - name: Check return codes
@@ -83,8 +83,8 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          fail_on_error: "true"
-          filter_mode: "nofilter"
+          # fail_on_error: "true"
+          # filter_mode: "nofilter"
           working_directory: testdata
       # The check is expected to fail on the test data
       - name: Check return codes
