--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,11 @@ on:
     branches:
       - main
   pull_request:
+    types:
+      - opened
+      - edited
+      - synchronize
+      - reopened
 jobs:
   test-check:
     runs-on: ubuntu-latest
